[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/fonts/montserrat_eb_128.tres" type="DynamicFont" id=4]
[ext_resource path="res://interface/profile/SearchRoom.gd" type="Script" id=5]

[node name="SearchRoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
margin_right = 0.0
margin_bottom = 79.0
size_flags_vertical = 1
text = "Sala de Jogos"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer2"]
margin_right = 720.0
margin_bottom = 779.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2/Panel"]
anchor_right = 1.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = "Salas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="VBoxContainer2"]
margin_left = 115.0
margin_top = 794.0
margin_right = 604.0
margin_bottom = 879.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Entrar na Sala"

[node name="CancelButton" type="Button" parent="VBoxContainer2"]
margin_left = 91.0
margin_top = 894.0
margin_right = 629.0
margin_bottom = 979.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Cancelar Busca"

[node name="Notification" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="VBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
